# Avatar_Talk

./: .gitignore  ADR-001-AI-Avatar-Agent-Architecture.md  ADR-002-Production-Build-Plan.md  CLAUDE.md  README.md  avatar.py
docs/superpowers/plans/: phase-1-browser-foundation-plan.md
engine/: config.py  config.yaml  logging_config.py  main.py  pyproject.toml
engine/modules/: performance.py
engine/modules/audio/: __init__.py  cache.py  stt_google.py  stt_interface.py  stt_whisper.py  tts_coqui.py  tts_elevenlabs.py  tts_interface.py  vad.py  virtual_devices.py
engine/modules/browser/: health_check.py  interface.py  pool.py  registry.py  teams.py
engine/modules/hitl/: controller.py
engine/modules/lipsync/: __init__.py  interface.py  sadtalker.py  virtual_camera.py  wav2lip.py
engine/modules/llm/: client.py  interface.py
engine/modules/llm/prompts/: conversation.txt  planning.txt  summary.txt
engine/modules/notifications/: __init__.py  firebase.py  interface.py
engine/orchestrator/: events.py  state_machine.py
engine/server/: __init__.py  auth.py  http.py  websocket.py
engine/setup/: install_virtual_devices.sh
engine/tests/: test_audio_pipeline.py  test_browser_interface.py  test_browser_pool.py  test_browser_teams.py  test_config.py  test_integration_phase1.py  test_lipsync.py  test_llm_planning.py  test_llm_responses.py  test_logging_config.py  test_notifications.py  test_performance.py  test_selector_health.py  test_state_machine.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: setup-linux.sh
(+3 files in other folders)
